[package]
name = "rough"
version = "0.2.0"
edition = "2021"
authors = ["Artemis <me@arty.li>"]
readme = "README.md"
repository = "https://github.com/Artemis21/rough"
license = "MIT"
description = "A very simple and opinionated static site generator."

[dependencies]
pulldown-cmark = "0.9"
tera = "1"
serde_yaml = "0.8"
